#S06P22A105-1372✨ Feat: mainpage nfts
