# backend/src/swagger/swagger-output.json
@@ -170,6 +170,28 @@
         }
       }
     },
+    "/user/followings": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "myUserSeq",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "profileUserSeq",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/market/artists": {
       "get": {
         "description": "",
@@ -209,6 +231,23 @@
           "200": {
             "description": "OK"
           },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/search/nfts/nonsale": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "input",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
           "404": {
             "description": "Not Found"
           }
@@ -294,6 +333,43 @@
           "200": {
             "description": "OK"
           },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/nft/artists": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "input",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/nft/nfts/nonsale": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "input",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
           "404": {
             "description": "Not Found"
           }
@@ -474,6 +550,12 @@
                   "example": "any"
                 },
                 "salePrice": {
+                  "example": "any"
+                },
+                "nftId": {
+                  "example": "any"
+                },
+                "nftTransactionId": {
                   "example": "any"
                 }
               }
